# plan

./: .gitignore  .gitmodules  .ycm_extra_conf.py  Makefile.am  PKGBUILD  build.sh  configure.ac
data/: Labels.ora  config.conf  trainctr.yml
src/: AppForm.cpp  Application.cpp  Application.h  BN223B426.png.yml  FileLoader.cpp  FileLoader.h  FileUtils.cpp  FileUtils.h  FlannMatcher.cpp  Makefile.am  OCR.cpp  OCR.h  PDFUtils.cpp  PDFUtils.h  PlanGUI.cpp  PlanGUI.h  ROIUtils.cpp  ROIUtils.h  Range.hpp  TestData.yml  build.sh  confdefs.h  example.cpp  feature.h  imgui.ini  main.cpp  main_app.cpp  main_new.cpp  plan.cpp  side_1.png.yml  trainctr.yml
src/emeocv/: Directory.cpp  Directory.h  ImageInput.cpp  ImageInput.h  ImageProcessor.cpp  ImageProcessor.h  KNearestOcr.cpp  KNearestOcr.h  Plausi.cpp  TextDetection.cpp  TextDetection.h
src/test/: cropped_word_recognition.cpp  end_to_end_recognition.cpp  main_Feature_Homography.cpp  quad-segmentation.cpp  textdetection.cpp
src2/: Application.cpp  Application.h  Makefile.am  PDFUtils.h  build.sh  config.h  config.status  imgui.ini  libtool  main.cpp  plan  plan.h
src2/doc/: Makefile
src2/examples/: Makefile
src2/man/: Makefile
src2/scripts/: Makefile
src2/src/: Makefile
